--- a/Clase05-CSS1/Mas ejemplos/div-span-2.html
+++ b/Clase05-CSS1/Mas ejemplos/div-span-2.html
@@ -1,21 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="div-span-2.css">
-    <title>Div y span</title>
-</head>
-<body>
-    <h1>Ejemplo de elementos divs</h1>
-    <div>Elemento 1</div>
-    <div>Elemento 2</div>
-    <div>Elemento 3</div>
-    <br>
-    <span>Span 1</span>
-    <span>Span 2</span>
-    <span>Span 3</span>
+Etiqueta link Archivo: div-span-2.css
 
-</body>
-</html>
+Titulo: Div y span
+Etiqueta: h1 Texto: Ejemplo de elementos divs
+Etiqueta: div Texto: Elemento 1
+Etiqueta: div Texto: Elemento 2
+Etiqueta: div Texto: Elemento 3
+Etiqueta: br
+Etiqueta: span Texto: Span 1
+Etiqueta: span Texto: Span 2
+Etiqueta: span Texto: Span 3
