--- a/Clase05-CSS1/Mas ejemplos/div-span-pre.html
+++ b/Clase05-CSS1/Mas ejemplos/div-span-pre.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Div y span</title>
-</head>
-<body>
-    <h1>Pequeño ejemplo de Div y Span</h1>
-    <span style="color:red">Un texto en span </span>
-    <span style="color:blue">Otro texto en span</span>
-    <div style="color:darkgreen">Un texto con div</div>
-    <div style="background-color:lightblue">Otro texto con div</div>
-</body>
-</html>
+Titulo: Div y span 
+
+Etiqueta: h1 Texto: Pequeño ejemplo de Div y Span
+Etiqueta: span style="color:red" Texto: Un texto en span 
+Etiqueta: span style="color:blue" Texto: Otro texto en span
+Etiqueta: div style="color:darkgreen" Texto: Un texto con div
+Etiqueta: div style="background-color:lightblue" Texto: Otro texto con div
