--- a/Clase05-CSS1/Mas ejemplos/div-span.html
+++ b/Clase05-CSS1/Mas ejemplos/div-span.html
@@ -1,23 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="div-span.css">
-    <title>Ejemplo Div y Span</title>
-</head>
-<body>
+Etiqueta: link Archivo: div-span.css
+
+Titulo: Ejemplo Div y Span
+
     <!-- En línea  -->
-    <span>0</span>
-    <span>Span 1</span>
-    <span>Contenedor Span 2</span>
-    <span>Este es Span 3</span>
-    <a href="#">Enlace</a>
+    Etiqueta: span Texto: 0
+    Etiqueta: span Texto: Span 1
+    Etiqueta: span Texto: Contenedor Span 2
+    Etiqueta: span Texto: Este es Span 3
+    Etiqueta: a href="#" Texto: Enlace
 
     <!-- En bloque -->
-    <div>Div 1</div>
-    <div>Div 2</div>
-    <div>Div 3</div>
-</body>
-</html>
+    Etiqueta: div Texto: Div 1
+    Etiqueta: div Texto: Div 2
+    Etiqueta: div Texto: Div 3
