--- a/Clase05-CSS1/Mas ejemplos/practica-selectores/selector-tipo.html
+++ b/Clase05-CSS1/Mas ejemplos/practica-selectores/selector-tipo.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+Titulo: Selector de tipo
+Etiqueta: link rel="stylesheet" href="selector-tipo.css"
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="selector-tipo.css">
-    <title>Selector de tipo</title>
-</head>
-
-<body>
-    <span>Acá hay un texto con color de fondo</span>
-    <p>Este es su segundo renglón</p>
-    <span>Acá la publicidad de Codo a Codo.</span>
-</body>
-
-</html>
+Etiqueta: span Texto: Acá hay un texto con color de fondo
+Etiqueta: p Texto: Este es su segundo renglón
+Etiqueta: span Texto: Acá la publicidad del CFP nº 401 - Berisso.
