--- a/Clase05-CSS1/Mas ejemplos/practica-selectores/selector-atributo.html
+++ b/Clase05-CSS1/Mas ejemplos/practica-selectores/selector-atributo.html
@@ -1,23 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+Titulo: Selector de atributo
+Etiqueta: link rel="stylesheet" href="selector-atributo.css"
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="selector-atributo.css">
-    <title>Selector de atributo</title>
-</head>
-
-<body>
-    <ul>
-        <li><a href="#interno">Link Interno</a></li>
-        <li><a href="http://ejemplo.com">Link a ejemplo.com</a></li>
-        <li><a href="#sinMayusculas">Sin chequear Mayusculas link</a></li>
-        <li><a href="http://ejemplo.org">Ejemplo org link</a></li>
-        <li><a href="http://ConMAyusculas.com">ConMAyusculas link</a></li>
-        <li><a href="https://ejemplo.org">ejemplo https org link</a></li>
-      </ul>
-</body>
-
-</html>
+Etiqueta: ul
+Etiqueta: li Etiqueta: a href="#interno" Texto: Link Interno
+Etiqueta: li Etiqueta: a href="http://ejemplo.com" Texto: Link a ejemplo.com
+Etiqueta: li Etiqueta: a href="#sinMayusculas" Texto: Sin chequear Mayusculas link
+Etiqueta: li Etiqueta: a href="http://ejemplo.org" Texto: Ejemplo org link
+Etiqueta: li Etiqueta: a href="http://ConMAyusculas.com" Texto: ConMAyusculas link
+Etiqueta: li Etiqueta: a href="https://ejemplo.org" Texto: ejemplo https org link
