--- a/Clase05-CSS1/Mas ejemplos/practica-selectores/selector-clase.html
+++ b/Clase05-CSS1/Mas ejemplos/practica-selectores/selector-clase.html
@@ -1,19 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+Titulo: Selector de clase
+Etiqueta: link rel="stylesheet" href="selector-clase.css"
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="selector-clase.css">
-    <title>Selector de clase</title>
-</head>
-
-<body>
-    <p class="red">Este texto es rojo.</p>
-    <p class="red yellow-bg">Este texto es rojo con fondo amarillo.</p>
-    <p class="red fancy">Este renglón es rojo con sombra.</p>
-    <p>Este renglón no tiene ningún formato.</p>
-</body>
-
-</html>
+Etiqueta: p class="red" Texto: Este texto es rojo.
+Etiqueta: p class="red yellow-bg" Texto: Este texto es rojo con fondo amarillo.
+Etiqueta: p class="red fancy" Texto: Este renglón es rojo con sombra.
+Etiqueta: p Texto: Este renglón no tiene ningún formato.
