--- a/Clase05-CSS1/Mas ejemplos/practica-selectores/selector-id.html
+++ b/Clase05-CSS1/Mas ejemplos/practica-selectores/selector-id.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+Titulo: Selector de id
+Etiqueta: link rel="stylesheet" href="selector-id.css">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="selector-id.css">
-    <title>Selector de id</title>
-</head>
+Etiqueta: div id="confondo" Texto: Este renglón tiene color de fondo azul
+Etiqueta: div Texto: Este renglón no tiene fondo.
 
-<body>
-    <div id="confondo">Este renglón tiene color de fondo azul</div>
-    <div>Este renglón no tiene fondo.</div>
-</body>
-
-</html>
