--- a/Clase05-CSS1/Mas ejemplos/practica-selectores/selector-universal.html
+++ b/Clase05-CSS1/Mas ejemplos/practica-selectores/selector-universal.html
@@ -1,22 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+Titulo: Selector universal
+Etiqueta: link rel="stylesheet" href="selector-universal.css"
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="selector-universal.css">
-    <title>Selector universal</title>
-</head>
+Etiqueta: p class="warning"
 
-<body>
-    <p class="warning">
-        <span lang="en-us">Esto es verde</span>en una linea roja.
-      </p>
-      <p id="maincontent" lang="en-gb">
-        <span class="warning">Esto es rojo</span> en una linea verde.
-      </p>
-      
-</body>
+Etiqueta: span lang="en-us" Texto: Esto es verde
+en una linea roja.
 
-</html>
+Etiqueta: p id="maincontent" lang="en-gb"
+Etiqueta: span class="warning" Texto: Esto es rojo 
+en una linea verde.
