--- a/Clase05-CSS1/Mas ejemplos/selectores_1.html
+++ b/Clase05-CSS1/Mas ejemplos/selectores_1.html
@@ -1,42 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- CSS externo -->
+Archivo: selectores_1.css
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS externo -->
-    <link rel="stylesheet" href="selectores_1.css">
-    <title>Selectores</title>
-</head>
+Titulo: Selectores
 
-<body>
-    <h1>Selectores</h1>
-    <h2>Selector universal</h2>
-    <p>Afecta a todo el documento HTML</p>
-    
-    <h2>Selector de etiqueta o tipo</h2>
-    <p>Afecta a una etiqueta específica, por ejemplo h1 o p </p>
+Etiqueta: h1 Texto: Selectores
+Etiqueta: h2 Texto: Selector universal
+Etiqueta: p Texto: Afecta a todo el documento HTML
 
-    <h2>Selectores de clase / Selectores de id</h2>
-    <p>Permiten darle a una serie de componentes un estilo en particular.</p>
+Etiqueta: h2 Texto: Selector de etiqueta o tipo
+Etiqueta: p Texto: Afecta a una etiqueta específica, por ejemplo h1 o p
+Etiqueta: h2 Texto: Selectores de clase / Selectores de id
+Etiqueta: p Texto: Permiten darle a una serie de componentes un estilo en particular.
 
-    <h3 class="subtitulos">Selectores de clase</h3>
-    <h3 class="subtitulos">Selectores de id</h3>
-    <div id="texto">
-        Selector de id aplicado a una etiqueta div
-    </div>
-    <h2>Jerarquía de selectores</h2>
-    <p>Pueden existir conflictos entre estilos, que tienen que ver con la <b>jerarquía de estilos</b> (lo veremos más adelante). Por ejemplo:</p>  
-    <div id="texto">
-        <p>Otro párrafo (selector de ID)</p>
-        <h2>Otro título con H2 dentro del div</h2>
-        En fin....
-    </div>
-    <br>
-    <!-- CSS en línea -->
-    <p style="color: white; background-color: gray;">Ejemplo CSS: estilo en línea.</p>
+Etiqueta: h3 class="subtitulos" Texto: Selectores de clase
+Etiqueta: h3 class="subtitulos" Texto: Selectores de id
+Etiqueta: div id="texto"
+Etiqueta:    Selector de id aplicado a una etiqueta div
 
+Etiqueta: h2 Texto: Jerarquía de selectores
+Etiqueta: p Texto: Pueden existir conflictos entre estilos, que tienen que ver con la <b>jerarquía de estilos</b> (lo veremos más adelante). Por ejemplo: 
+Etiqueta: div id="texto"
+Etiqueta: p Texto: Otro párrafo (selector de ID)
+Etiqueta: h2 Texto: Otro título con H2 dentro del div
 
-</body>
+ En fin....
 
-</html>
+Etiqueta: br
+
+<!-- CSS en línea -->
+p style="color: white; background-color: gray;" Texto: Ejemplo CSS: estilo en línea.
