--- a/Clase09-CSS5/12flexbox-responsive.html
+++ b/Clase09-CSS5/12flexbox-responsive.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Ejemplo Flexbox</title>
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<link rel="stylesheet" href="12flexbox-responsive.css">
-</head>
-<body>
-	<div class="padre">
-		<header class="header">header</header>
-		<article class="articulo"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet odio facere distinctio consequuntur laudantium quisquam, quasi porro quas, omnis animi unde veniam accusamus repellat, pariatur nesciunt. Optio sunt debitis, distinctio.</p></article>
-		<aside class="aside1 izquierda">izquierda</aside>
-		<aside class="aside2 derecha">derecha</aside>
-		<footer class="footer">footer</footer>
-	</div>
-</body>
-</html>
+Ejemplo Flexbox
+link 12flexbox-responsive.class
+
+Etiqueta: div class="padre"
+Etiqueta: header class="header" Texto: header
+Etiqueta: article class="articulo"
+Etiqueta: p Texto: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet odio facere distinctio consequuntur laudantium quisquam, quasi porro quas, omnis animi unde veniam accusamus repellat, pariatur nesciunt. Optio sunt debitis, distinctio.
+
+Etiqueta: aside class="aside1 izquierda" Texto: izquierda
+Etiqueta: aside class="aside2 derecha" Texto: derecha
+Etiqueta: footer class="footer" Texto: footer
+Cierre div 
+
