--- a/Clase09-CSS5/13menu_flex_animado.html
+++ b/Clase09-CSS5/13menu_flex_animado.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+Menú flex animado
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú flex animado</title>
-    <style>
+Etiqueta: style
         .contenedor {
             width: 100%;
             height: 60px;
@@ -72,22 +66,15 @@
             z-index: -1;       /* Por detrás del texto del link*/
         }
 
-    </style>
 
-</head>
-
-<body>
-    <div class="contenedor">
+Etiqueta: div class="contenedor">
         <!-- Elementos del menu -->
-        <ul>
-            <li><a href="#">INICIO</a></li>
-            <li><a href="#">OBJETIVOS</a></li>
-            <li><a href="#">PRODUCTOS</a></li>
-            <li><a href="#">PORTFOLIO</a></li>
-            <li><a href="#">CLIENTES</a></li>
-            <li><a href="#">CONTACTO</a></li>
-        </ul>
-    </div>
-</body>
-
-</html>
+    Etiqueta: ul
+        Etiqueta: li Etiqueta: a href="#" Texto: INICIO
+        Etiqueta: li Etiqueta: a href="#" Texto: OBJETIVOS
+        Etiqueta: li Etiqueta: a href="#" Texto: PRODUCTOS
+        Etiqueta: li Etiqueta: a href="#" Texto: PORTFOLIO
+        Etiqueta: li Etiqueta: a href="#" Texto: CLIENTES
+        Etiqueta: li Etiqueta: a href="#" Texto: CONTACTO
+    
+Cierre div 
