--- a/Clase09-CSS5/8Flexbox-gap.html
+++ b/Clase09-CSS5/8Flexbox-gap.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+Flex 8 - Huecos (gaps)
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flex 8 - Huecos (gaps)</title>
-
-    <style>
+Etiqueta: style
         code {
             background-color: yellow;
             font-weight: bold;
@@ -62,44 +55,44 @@
             padding: 20px;
             font-size: 16px;
         }
-    </style>
-</head>
 
-<body>
+Etiqueta: h3 Texto: Flexbox | Huecos (gaps)
 
-    <h3>Flexbox | Huecos (gaps)</h3>
+Etiqueta: p Texto: Las propiedades <code>row-gap</code> y <code>column-gap</code> permiten establecer el tamaño de un «hueco» entre ítems hijos directamente desde el elemento padre (contenedor), y sin necesidad de estar utilizando padding o margin en los elementos hijos.
 
-    <p>Las propiedades <code>row-gap</code> y <code>column-gap</code> permiten establecer el tamaño de un «hueco» entre ítems hijos directamente desde el elemento padre (contenedor), y sin necesidad de estar utilizando padding o margin en los elementos hijos.</p>
+Etiqueta: p Texto: Ten en cuenta que sólo una de las dos propiedades tendrá efecto, dependiendo de si la propiedad <code>flex-direction</code> se establece en <code>column</code> o en <code>row.</code>.
 
-    <p>Ten en cuenta que sólo una de las dos propiedades tendrá efecto, dependiendo de si la propiedad <code>flex-direction</code> se establece en <code>column</code> o en <code>row.</code>.</p>
+Etiqueta: h4 Texto: row-gap
+Etiqueta: div class="flex-containerh"
+Etiqueta: div Texto: Item1 column-gap:40px;
+Etiqueta: div Texto: Item2 column-gap:40px;
+Etiqueta: div Texto: Item3 column-gap:40px;
+Cierre div 
+Etiqueta: br
+Etiqueta: br
 
-    <h4>row-gap</h4>
-    <div class="flex-containerh">
-        <div>Item1 column-gap:40px;</div>
-        <div>Item2 column-gap:40px;</div>
-        <div>Item3 column-gap:40px;</div>
-    </div><br><br>
+Etiqueta: h4 Texto: column-gap
+Etiqueta: div class="flex-containerv"
+Etiqueta: div Texto: Item1 row-gap: 40px
+Etiqueta: div Texto: Item2 row-gap: 40px
+Etiqueta: div Texto: Item3 row-gap: 40px
+Cierre div 
+Etiqueta: br
+Etiqueta: br
 
-    <h4>column-gap</h4>
-    <div class="flex-containerv">
-        <div>Item1 row-gap: 40px</div>
-        <div>Item2 row-gap: 40px</div>
-        <div>Item3 row-gap: 40px</div>
-    </div><br><br>
+Etiqueta: p Texto: Por último, es posible usar ambas propiedades si tenemos la propiedad <code>flex-wrap</code> definida como <code>wrap</code>, permitiendo el uso de "multicolumnas":
 
-    <p>Por último, es posible usar ambas propiedades si tenemos la propiedad <code>flex-wrap</code> definida como <code>wrap</code>, permitiendo el uso de "multicolumnas":</p>
-    <h4>column-gap + row-gap + flex-wrap: wrap</h4>
-    <div class="flex-container">
-        <div>Item1 <br>row-gap: 20px;<br> column-gap: 60px;<br></div>
-        <div>Item2 <br>row-gap: 20px;<br> column-gap: 60px;<br></div>
-        <div>Item3 <br>row-gap: 20px;<br> column-gap: 60px;<br></div>
-        <div>Item4 <br>row-gap: 20px;<br> column-gap: 60px;<br></div>
-        <div>Item5 <br>row-gap: 20px;<br> column-gap: 60px;<br></div>
-        <div>Item6 <br>row-gap: 20px;<br> column-gap: 60px;<br></div>
-        <div>Item7 <br>row-gap: 20px;<br> column-gap: 60px;<br></div>
-        <div>Item8 <br>row-gap: 20px;<br> column-gap: 60px;<br></div>
-        <div>Item9 <br>row-gap: 20px;<br> column-gap: 60px;<br></div>
-    </div><br><br>
-</body>
-
-</html>
+Etiqueta: h4 Texto: column-gap + row-gap + flex-wrap: wrap
+Etiqueta: div class="flex-container"
+Etiqueta: div Texto: Item1 <br>row-gap: 20px;<br> column-gap: 60px;<br>
+Etiqueta: div Texto: Item2 <br>row-gap: 20px;<br> column-gap: 60px;<br>
+Etiqueta: div Texto: Item3 <br>row-gap: 20px;<br> column-gap: 60px;<br>
+Etiqueta: div Texto: Item4 <br>row-gap: 20px;<br> column-gap: 60px;<br>
+Etiqueta: div Texto: Item5 <br>row-gap: 20px;<br> column-gap: 60px;<br>
+Etiqueta: div Texto: Item6 <br>row-gap: 20px;<br> column-gap: 60px;<br>
+Etiqueta: div Texto: Item7 <br>row-gap: 20px;<br> column-gap: 60px;<br>
+Etiqueta: div Texto: Item8 <br>row-gap: 20px;<br> column-gap: 60px;<br>
+Etiqueta: div Texto: Item9 <br>row-gap: 20px;<br> column-gap: 60px;<br>
+Cierre div 
+Etiqueta: br
+Etiqueta: br
