--- a/Clase09-CSS5/espacios.html
+++ b/Clase09-CSS5/espacios.html
@@ -1,25 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+Espacios
 
-    <style>.test {
+Etiqueta: style
+.test {
         white-space: pre-wrap;
         color:white;
         text-align: center;
         background-color: black;
-        }</style>
-</head>
-<body>
-    <p class="test">
-        Croacia, América,     Argentina, Perú, Colombia, México, España. 
-    </p>
+        }
 
-    <p class="test">
+Etiqueta: p class="test" Texto:
+        Croacia, América,     Argentina, Perú, Colombia, México, España. 
+
+Etiqueta: p class="test" Texto:
         1 2  3   4     5          6              7 
-    </p>
-</body>
-</html>
