--- a/Clase09-CSS5/tips_flex_1.html
+++ b/Clase09-CSS5/tips_flex_1.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tips para Flex</title>
+Tips para flex
 
-    <style>
+Etiqueta: style
         .flex-container {
             display: inline-flex;
             height: 200px;
@@ -20,15 +14,11 @@
             background-color:white;
             padding:30px;
         }
-    </style>
-</head>
-<body>
-    <h3>Centrar en forma perfecta:</h3>
 
-    <p>El elemento hijo, de color blanco, está en el centro del contenedor flex de color verde.</p>
+Etiqueta: h3 Texto: Centrar en forma perfecta:
+
+Etiqueta: p Texto: El elemento hijo, de color blanco, está en el centro del contenedor flex de color verde.
    
-    <div class="flex-container">
-        <div class="item1">Item1</div>
-    </div>
-</body>
-</html>
+Etiqueta: div class="flex-container"
+Etiqueta: div class="item1" Texto: Item1
+Cierre div 
