--- a/Clase11-Bootstrap/00-Container.html
+++ b/Clase11-Bootstrap/00-Container.html
@@ -12,3 +12,14 @@ cierre del div
 
     Etiqueta: h1  Texto: Mi primera página de Bootstrap
     Etiqueta: p  Texto: Esta parte está FUERA de la clase <mark>.container.</mark>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
